# rag-project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  config.py  entrypoint.sh  env.py  pyproject.toml  test_api.py  test_arxiv.py  test_ingestion.py  test_rag.py
backend/alembic/: env.py
backend/alembic/versions/: f136a1278da9_init_schema.py
backend/api/: app.py
backend/collectors/: arxiv_collector.py  xairv_collector.py
backend/database/: db.py  models.py
backend/pipeline/: ingestion.py
backend/rag/: rag_engine.py
frontend/: package-lock.json  package.json  stats.html  vite.config.ts
frontend/e2e/: papers-list.spec.ts  rag-search.spec.ts
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/api/: papers.ts  rag.ts
frontend/src/api/mocks/: mockData.ts
frontend/src/components/: ErrorFallback.tsx  NavBar.tsx  PaperCard.test.tsx  PaperCard.tsx
frontend/src/features/papers/: queries.ts  routes.tsx
frontend/src/features/papers/api/: papers.ts
frontend/src/features/rag/: routes.tsx
frontend/src/mocks/: handlers.ts  mockData.ts
frontend/src/pages/: PaperDetailPage.test.tsx  PaperDetailPage.tsx  PapersListPage.test.tsx  PapersListPage.tsx  SearchPage.test.tsx  SearchPage.tsx
frontend/src/shared/hooks/: useDebounce.test.ts  useDebounce.ts
frontend/src/shared/mocks/: mockData.ts
frontend/src/shared/test/: renderWithProviders.tsx  setup.ts
frontend/src/shared/ui/: ErrorFallback.test.tsx
frontend/src/test/: setup.ts
frontend/src/types/: paper.ts
init-db/: 01-init.sql
(+10 files in other folders)
